--- a/LocOut/wear/src/main/AndroidManifest.xml
+++ b/LocOut/wear/src/main/AndroidManifest.xml
@@ -8,8 +8,32 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".LocOut"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
+
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="false" />
+
+        <service
+            android:name=".services.LoggingService"
+            android:label="Logging Service" >
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
+
+        <receiver android:name=".services.LoggingServiceScheduler" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="de.hpi.bpm2.sensordatalogger.intent.action.SERVICE_START" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".services.LoggingServiceInvoker" />
+
         <activity
             android:name=".MainActivityWear"
             android:label="@string/app_name">
