--- a/LocOut/wear/src/main/AndroidManifest.xml
+++ b/LocOut/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.locout.android">
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
